syntax = "proto3";
package tcc;
option go_package = "github.com/liujunren93/tcc/proto;proto";


service TccServer{
  rpc Registry(empty)returns(registryRes);
  rpc LogAction(logActionReq)returns(tccRes);
}


message empty{

}

message registryResData {
  int64 TxID = 1;
}
message registryRes{
  int32 code = 1;
  string msg = 2;
  registryResData data = 3;
}

message logActionData{
  int64  pk = 1;
  int64  txID = 2;
  int64  endpointTxID = 3;
  string endpointName = 4;
  int64  level = 5;
  int64  status = 6;

}
message logActionReq{
  repeated logActionData data = 1;
}
//message logActionRes{
//  int32 code = 1;
//  string msg = 2;
//  repeated logActionData data = 3;
//}

message tccReq{
  map<string, string> data = 1;
}

message tccRes{
  int32 code = 1;
  string msg = 2;
  map<string, string> data = 3;
}

